  since it's being heavily rate-limited at the moment. Only one call
  is using it now, which seems to work fine.

- Backwards incompatible change: As a result of the above change, when
  looking for packages on PyPI, the package name must now be spelled
  exactly correct, including capitalization.

- Some more code cleanup/modernization [CAM Gerlach]


3.1 (2021-03-06)
----------------

- Added correct detection of setup.py encoding

- Code cleanup [CAM Gerlach]


3.0.1 (2021-03-02)
------------------

- Drop support for Python 2 [Florian Bruhin]

- Add back official support for Python 3.6, I didn't realize it was still officially supported


2.6.1 (2021-02-16)
------------------

- Update to the current list of Trove classifiers.

- Officially support Python 3.8 and 3.9

- Drop official support for Python 3.5 and 3.6 (still works though).


2.6 (2019-11-02)
----------------

- Ran flake8 and black on the code, better formatting for
  classifiers.py generation.

- Support for PEP 517, setup.cfg-only packages. [Max Tyulin]

- Adds support for Markdown long_descriptions, if you set
  long_description_content_type to 'text/markdown'

- Installs Pygments to avoid an error message of you have
  syntax highlighted code in the long_description.


2.5 (2019-06-01)
----------------

- Fixed #35: Correctly restore ``sys.argv``.  [maurits]

- Added back the BusFactor test, the XMLRPC API supports it.

- #26: Adding a test to check for a development status classifier.

- #21: Accept the new project_urls distribution data.

- Now verifies that classifiers are valid, and that the license field
  and license classifiers match.

- The rating now again reflects if the long_description isn't valid ReST.

- #38: Recommendations for the License field has changed.


2.4 (2018-08-15)
----------------

- Get rid of the tests that rely on HTML scraping, it's too brittle.

- Update to use pypi.org instead of pypi.python.org
  [Andreas Lutro, Lennart Regebro]
